--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cron": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "nanoid": "^5.1.0",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.3"
   }
 }
